<resources>
    <string name="app_name">Todo App</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="emailInput">Email</string>
    <string name="passwordInput">Password</string>
    <string name="login">Login</string>
    <string name="register">register</string>
    <string name="todo_app">Todo App</string>
    <string name="add">Add</string>
    <string name="what_do_you_want_to_note">What do you want to note ?</string>
    <string name="log_out">Log Out</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="send_new_password">Send new password</string>
</resources>