<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingHorizontal="16dp"
    tools:context=".ForgotPassword">

    <TextView
        android:textSize="30sp"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/emailInput"
        android:hint="@string/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/sendNewPasswordButton"
        android:textAllCaps="false"
        android:text="@string/send_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>